fixed spacing and added work section title

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-body {
+html, body {
   margin: 0;
 }
 
@@ -130,7 +130,7 @@ body {
   color: #ddd;
   background-color: #333;
   padding-top: 80px;
-  padding-bottom: 80px;
+  /*padding-bottom: 80px;*/
 }
 
 .work .col {
@@ -156,6 +156,17 @@ body {
 .work h2 {
   font-weight: 600;
   font-size: 23px;
+}
+
+.work h1 {
+  color: white;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  font-size: 23px;
+  margin-top: 0;
+  margin-bottom: 50px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .work p {
